--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /tg_bot/langs/en.yaml
-    translation: /tg_bot/langs/%two_letters_code%.json
+  - source: /ERICA/langs/en.yaml
+    translation: /ERICA/langs/%two_letters_code%.json
