--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Python: Module",
             "type": "python",
             "request": "launch",
-            "module": "tg_bot"
+            "module": "ERICA"
         }
     ]
 }
