--- a/sample_config.ini
+++ b/sample_config.ini
@@ -3,8 +3,8 @@ log = True
 APP_ID = "6435225"
 API_HASH = "4e984ea35f854762dcde906dce426c2d"
 TOKEN = "2068351945:AAFBcKDBjWge39VKLNHYGnzLGfSwga75K9M"
-OWNER_ID = 1669178360
-OWNER_USERNAME = Timesisnotwaiting
+OWNER_ID = "1669178360"
+OWNER_USERNAME = "Timesisnotwaiting"
 SQLALCHEMY_DATABASE_URI = "postgres://riedyoia:6fxr45MhrWlHEUVJb7-W8WXXxFzMpQAX@castor.db.elephantsql.com/riedyoia"
 MESSAGE_DUMP = "-1001395410636"
 GBAN_LOGS = "-1001395410636"
