--- a/sample_config.ini
+++ b/sample_config.ini
@@ -1,14 +1,15 @@
 [kigconfig]
 log = True
-APP_ID = "6435225"
-API_HASH = "4e984ea35f854762dcde906dce426c2d"
-TOKEN = "2068351945:AAFBcKDBjWge39VKLNHYGnzLGfSwga75K9M"
-OWNER_ID = "1669178360"
-OWNER_USERNAME = "Timesisnotwaiting"
-SQLALCHEMY_DATABASE_URI = "postgres://riedyoia:6fxr45MhrWlHEUVJb7-W8WXXxFzMpQAX@castor.db.elephantsql.com/riedyoia"
-MESSAGE_DUMP = "-1001395410636"
-GBAN_LOGS = "-1001395410636"
-SYS_ADMIN =
+APP_ID = 6435225
+API_HASH = 4e984ea35f854762dcde906dce426c2d
+TOKEN = 2068351945:AAFBcKDBjWge39VKLNHYGnzLGfSwga75K9M
+OWNER_ID = 1669178360
+OWNER_USERNAME = Timesisnotwaiting
+SQLALCHEMY_DATABASE_URI = postgres://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
+DB_URI = postgres://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
+MESSAGE_DUMP = -1001395410636
+GBAN_LOGS = -1001395410636
+SYS_ADMIN = 1669178360
 LOAD =
 NO_LOAD = sed
 WEBHOOK = False
