--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 2068351945:AAFBcKDBjWge39VKLNHYGnzLGfSwga75K9M
 OWNER_ID = 1669178360
 OWNER_USERNAME = Timesisnotwaiting
-SQLALCHEMY_DATABASE_URI = postgres://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
-DB_URI = postgres://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
+SQLALCHEMY_DATABASE_URI = postgresql://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
+DB_URI = postgresql://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
 MESSAGE_DUMP = -1001395410636
 GBAN_LOGS = -1001395410636
 SYS_ADMIN = 1669178360
