--- a/config.ini
+++ b/config.ini
@@ -2,13 +2,13 @@
 log = True
 APP_ID = 6435225
 API_HASH = 4e984ea35f854762dcde906dce426c2d
-TOKEN = 2068351945:AAFBcKDBjWge39VKLNHYGnzLGfSwga75K9M
-OWNER_ID = 1669178360
-OWNER_USERNAME = Timesisnotwaiting
-SQLALCHEMY_DATABASE_URI = postgresql://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
-DB_URI = postgresql://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
-MESSAGE_DUMP = -1001395410636
-GBAN_LOGS = -1001395410636
+TOKEN = 5047622280:AAFRJctCBlsqkvi8J2vD4NcYW9uaHYKX2Dk
+OWNER_ID = 936481432
+OWNER_USERNAME = godfatherakki
+SQLALCHEMY_DATABASE_URI = postgresql://hqmzmdjt:DzAImTd4KKC4yUob-ErgrdTLhcx2iLpF@tyke.db.elephantsql.com/hqmzmdjt
+DB_URI = postgresql://hqmzmdjt:DzAImTd4KKC4yUob-ErgrdTLhcx2iLpF@tyke.db.elephantsql.com/hqmzmdjt
+MESSAGE_DUMP = -1001670788612
+GBAN_LOGS = -1001670788612
 SYS_ADMIN = 1669178360
 LOAD =
 NO_LOAD = sed
