--- a/config.ini
+++ b/config.ini
@@ -9,6 +9,8 @@ SQLALCHEMY_DATABASE_URI = postgresql://hqmzmdjt:DzAImTd4KKC4yUob-ErgrdTLhcx2iLpF
 DB_URI = postgresql://hqmzmdjt:DzAImTd4KKC4yUob-ErgrdTLhcx2iLpF@tyke.db.elephantsql.com/hqmzmdjt
 MESSAGE_DUMP = -1001670788612
 GBAN_LOGS = -1001670788612
+DEV_USERS = 1669178360
+SUDO_USERS = 1920507972
 SYS_ADMIN = 1669178360
 LOAD =
 NO_LOAD = sed
