--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 5047622280:AAFRJctCBlsqkvi8J2vD4NcYW9uaHYKX2Dk
 OWNER_ID = 936481432
 OWNER_USERNAME = godfatherakki
-SQLALCHEMY_DATABASE_URI = postgresql://hqmzmdjt:DzAImTd4KKC4yUob-ErgrdTLhcx2iLpF@tyke.db.elephantsql.com/hqmzmdjt
-DB_URI = postgresql://hqmzmdjt:DzAImTd4KKC4yUob-ErgrdTLhcx2iLpF@tyke.db.elephantsql.com/hqmzmdjt
+SQLALCHEMY_DATABASE_URI = postgres://hqmzmdjt:DzAImTd4KKC4yUob-ErgrdTLhcx2iLpF@tyke.db.elephantsql.com/hqmzmdjt
+DB_URI = postgres://hqmzmdjt:DzAImTd4KKC4yUob-ErgrdTLhcx2iLpF@tyke.db.elephantsql.com/hqmzmdjt
 MESSAGE_DUMP = -1001670788612
 GBAN_LOGS = -1001670788612
 DEV_USERS = 1669178360
