--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 5047622280:AAFRJctCBlsqkvi8J2vD4NcYW9uaHYKX2Dk
 OWNER_ID = 936481432
 OWNER_USERNAME = godfatherakki
-SQLALCHEMY_DATABASE_URI = postgresql://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
-DB_URI = postgresql://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
+SQLALCHEMY_DATABASE_URI = postgres://dnldonok:oetwyn69yvH3O4hKlL8-hDbz2NVU5FpK@tyke.db.elephantsql.com/dnldonok
+DB_URI = postgres://dnldonok:oetwyn69yvH3O4hKlL8-hDbz2NVU5FpK@tyke.db.elephantsql.com/dnldonok
 MESSAGE_DUMP = -1001670788612
 GBAN_LOGS = -1001670788612
 DEV_USERS = 1669178360
