--- a/config.ini
+++ b/config.ini
@@ -26,7 +26,7 @@ STRICT_GBAN = True
 BAN_STICKER =
 ALLOW_EXCL = True
 CUSTOM_CMD = False
-CASH_API_KEY = https://www.alphavantage.co/support/#api-key
+CASH_API_KEY = 1D8NUV8L686K5AKE
 TIME_API_KEY = https://timezonedb.com/api
 WALL_API = https://wall.alphacoders.com/api.php
 spamwatch_api = https://t.me/SpamWatchBot
