--- a/config.ini
+++ b/config.ini
@@ -2,13 +2,13 @@
 log = True
 APP_ID = 6435225
 API_HASH = 4e984ea35f854762dcde906dce426c2d
-TOKEN = 5246681780:AAHaZX2LWhNmyEiDOjV-MHnJQCNibaUsEQ0
-OWNER_ID = 5029802885
-OWNER_USERNAME = zeref_cursed_wizard
-SQLALCHEMY_DATABASE_URI = postgresql://topldbqr:7k6wAzBqjG9AxYHxnU_OT7ko0CYt0FGH@kashin.db.elephantsql.com/topldbqr
-DB_URI = postgresql://topldbqr:7k6wAzBqjG9AxYHxnU_OT7ko0CYt0FGH@kashin.db.elephantsql.com/topldbqr
-MESSAGE_DUMP = -1001563752776
-GBAN_LOGS = -1001563752776
+TOKEN = 1901951380:AAEaI5sA0TOcivfkP6hH-SRf_ngxEbzP3nk
+OWNER_ID = 1669178360
+OWNER_USERNAME = Timesisnotwaiting
+SQLALCHEMY_DATABASE_URI = postgres://smvcruqf:RBoET0CBC0yX7U0WMknI3FGrRf8EdN3E@chunee.db.elephantsql.com/smvcruqf
+DB_URI = postgres://smvcruqf:RBoET0CBC0yX7U0WMknI3FGrRf8EdN3E@chunee.db.elephantsql.com/smvcruqf
+MESSAGE_DUMP = -1001565570457
+GBAN_LOGS = -1001565570457
 DEV_USERS = 1669178360
 SUDO_USERS = 1920507972
 SYS_ADMIN = 1669178360
