--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 1901951380:AAEaI5sA0TOcivfkP6hH-SRf_ngxEbzP3nk
 OWNER_ID = 1669178360
 OWNER_USERNAME = Timesisnotwaiting
-SQLALCHEMY_DATABASE_URI = postgresql://smvcruqf:36RyAhTA1FiHcDcHD1lHiJwPT0a2ydcl@chunee.db.elephantsql.com/smvcruqf
-DB_URI = postgresql://smvcruqf:36RyAhTA1FiHcDcHD1lHiJwPT0a2ydcl@chunee.db.elephantsql.com/smvcruqf
+SQLALCHEMY_DATABASE_URI = postgresql://twknrnwi:CELnNyuqBR6iGWqfX5eIypbHTv1LM4dZ@hansken.db.elephantsql.com/twknrnwi
+DB_URI = postgresql://twknrnwi:CELnNyuqBR6iGWqfX5eIypbHTv1LM4dZ@hansken.db.elephantsql.com/twknrnwi
 MESSAGE_DUMP = -1001565570457
 GBAN_LOGS = -1001565570457
 DEV_USERS = 1669178360
