--- a/config.ini
+++ b/config.ini
@@ -32,5 +32,5 @@ spamwatch_api = https://t.me/SpamWatchBot
 SPAMMERS =
 LASTFM_API_KEY = https://www.last.fm/api/account/create
 CF_API_KEY = coffehouse.intellivoid.net
-BOT_API_URL = https://api.telegram.org/bot
+BOT_API_URL = https://api.telegram.org/bo
 BOT_API_FILE_URL = https://api.telegram.org/file/bot
