--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,13 @@ psutil
 psycopg2-binary
 pyYAML>=5.1.2
 pyrate-limiter
-python-telegram-bot==13.10
+python-telegram-bot==13.9
 requests
 spamwatch
 speedtest-cli
-sqlalchemy==1.4.29
+sqlalchemy==1.4.11
 telethon==1.16.4
 ujson
 pycryptodome
 base58
+pytimeparse
