--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,7 @@ python-telegram-bot==13.11
 requests
 spamwatch
 speedtest-cli
-sqlalchemy==1.4.11
-telethon==1.16.4
+sqlalchemy
 ujson
 pycryptodome
 base58
