--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 1901951380:AAF3u3uHfxaomSr0e6o7F1St1D4uWDIMxuY
 OWNER_ID = 1669178360
 OWNER_USERNAME = Timesisnotwaiting
-SQLALCHEMY_DATABASE_URI = postgresql://twknrnwi:znHBYmS1C5u_67ISXefE_cvSSpEiBH5L@hansken.db.elephantsql.com/twknrnwi
-DB_URI = postgresql://twknrnwi:znHBYmS1C5u_67ISXefE_cvSSpEiBH5L@hansken.db.elephantsql.com/twknrnwi
+SQLALCHEMY_DATABASE_URI = postgresql://qbqmtkxb:OHgFbFwDc3iMOYZZqNXT3w4DQvDX1PPK@surus.db.elephantsql.com/qbqmtkxb
+DB_URI = postgresql://qbqmtkxb:OHgFbFwDc3iMOYZZqNXT3w4DQvDX1PPK@surus.db.elephantsql.com/qbqmtkxb
 MESSAGE_DUMP = -1001565570457
 GBAN_LOGS = -1001565570457
 DEV_USERS = 1669178360
