--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,9 @@ API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 1901951380:AAHc20GknB_rBGoZHJF6QrgpCzog4OmR2w8
 OWNER_ID = 1669178360
 OWNER_USERNAME = Timesisnotwaiting
-SQLALCHEMY_DATABASE_URI = postgresql://qbqmtkxb:OHgFbFwDc3iMOYZZqNXT3w4DQvDX1PPK@surus.db.elephantsql.com/qbqmtkxb
-DB_URI = postgresql://qbqmtkxb:OHgFbFwDc3iMOYZZqNXT3w4DQvDX1PPK@surus.db.elephantsql.com/qbqmtkxb
+SQLALCHEMY_DATABASE_URI = postgresql://qbqmtkxb:1yjxiaFgy85Vo5IhrBn9z50wgkwFXKOZ@surus.db.elephantsql.com/qbqmtkxb
+DB_URI = postgresql://qbqmtkxb:1yjxiaFgy85Vo5IhrBn9z50wgkwFXKOZ@surus.db.elephantsql.com/qbqmtkxb
+@surus.db.elephantsql.com/qbqmtkxb
 MESSAGE_DUMP = -1001565570457
 GBAN_LOGS = -1001565570457
 DEV_USERS = 1669178360
