--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,7 @@ GBAN_LOGS = -1001565570457
 DEV_USERS = 1669178360
 SUDO_USERS = 1920507972
 SYS_ADMIN = 1669178360
+BAN_STICKER = CAACAgUAAxkBAAEEpFNidTkfqXAEtd4GDKV_zVRSloue0QACvwUAAsgdqVfeq_hV7FwoQCQE
 LOAD =
 NO_LOAD = sed
 WEBHOOK = False
