--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,11 @@
 log = True
 APP_ID = 6435225
 API_HASH = 4e984ea35f854762dcde906dce426c2d
-TOKEN = 1901951380:AAGIj359QNk204ra77OdsZcAyv7TUNSMUl0
+TOKEN = 
 OWNER_ID = 1669178360
 OWNER_USERNAME = Timesisnotwaiting
-SQLALCHEMY_DATABASE_URI = postgresql://hwzbfhet:OsTkqCqMvqW1UGfZhAgHekADNsUEmmQi@surus.db.elephantsql.com/hwzbfhet
-DB_URI = postgresql://hwzbfhet:OsTkqCqMvqW1UGfZhAgHekADNsUEmmQi@surus.db.elephantsql.com/hwzbfhet
+SQLALCHEMY_DATABASE_URI = 
+DB_URI = 
 MESSAGE_DUMP = -1001565570457
 GBAN_LOGS = -1001565570457
 DEV_USERS = 1669178360
