--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,7 @@ TOKEN =
 OWNER_ID = 1669178360
 OWNER_USERNAME = Timesisnotwaiting
 SQLALCHEMY_DATABASE_URI = 
-DB_URI = 
+DB_URI = http://elephantsql.com
 MESSAGE_DUMP = -1001565570457
 GBAN_LOGS = -1001565570457
 DEV_USERS = 1669178360
