--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 
 OWNER_ID = 1669178360
 OWNER_USERNAME = Timesisnotwaiting
-SQLALCHEMY_DATABASE_URI = 
+SQLALCHEMY_DATABASE_URI = http://elephantsql.com
 DB_URI = http://elephantsql.com
 MESSAGE_DUMP = -1001565570457
 GBAN_LOGS = -1001565570457
