--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,17 @@
 [kigconfig]
 log = True
-APP_ID = 6435225
-API_HASH = 4e984ea35f854762dcde906dce426c2d
-TOKEN = 
-OWNER_ID = 1669178360
-OWNER_USERNAME = Timesisnotwaiting
+APP_ID = 19584198
+API_HASH = 0ed81ce2babcf61c880d2b49c2dee9f1
+TOKEN = 5594511258:AAGlj6mLMgKR63UlevkiCqG-Y7KFyHt-qjU
+OWNER_ID = 5656739348
+OWNER_USERNAME = Am_Tricky_Yash
 SQLALCHEMY_DATABASE_URI = http://elephantsql.com
 DB_URI = http://elephantsql.com
-MESSAGE_DUMP = -1001565570457
-GBAN_LOGS = -1001565570457
-DEV_USERS = 1669178360
-SUDO_USERS = 1920507972
-SYS_ADMIN = 1669178360
+MESSAGE_DUMP = -1001869636024
+GBAN_LOGS = -1001869636024
+DEV_USERS = 5656739348
+SUDO_USERS = 5656739348 5442143084
+SYS_ADMIN = 5656739348
 BAN_STICKER = CAACAgUAAxkBAAEEpFNidTkfqXAEtd4GDKV_zVRSloue0QACvwUAAsgdqVfeq_hV7FwoQCQE
 LOAD =
 NO_LOAD = sed
