--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ API_HASH = 0ed81ce2babcf61c880d2b49c2dee9f1
 TOKEN = 5594511258:AAGlj6mLMgKR63UlevkiCqG-Y7KFyHt-qjU
 OWNER_ID = 5656739348
 OWNER_USERNAME = Am_Tricky_Yash
-SQLALCHEMY_DATABASE_URI = http://elephantsql.com
-DB_URI = http://elephantsql.com
+SQLALCHEMY_DATABASE_URI = postgres://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
+DB_URI = postgres://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
 MESSAGE_DUMP = -1001869636024
 GBAN_LOGS = -1001869636024
 DEV_USERS = 5656739348
