--- a/config.ini
+++ b/config.ini
@@ -2,16 +2,16 @@
 log = True
 APP_ID = 6435225
 API_HASH = 4e984ea35f854762dcde906dce426c2d
-TOKEN = 5594511258:AAGiJHgkCOWFiInsgBT2U1zn68dDoMoo-4Q
-OWNER_ID = 5656739348
-OWNER_USERNAME = Am_Tricky_Yash
+TOKEN = 5457975178:AAE0o8sHEFpectM1z1pUKFSnmbONbv8vU04
+OWNER_ID = 1113343031
+OWNER_USERNAME = JOCKU
 SQLALCHEMY_DATABASE_URI = postgresql://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
 DB_URI = postgresql://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
 MESSAGE_DUMP = -1001869636024
 GBAN_LOGS = -1001869636024
-DEV_USERS = 5656739348
-SUDO_USERS = 5656739348 5442143084
-SYS_ADMIN = 5656739348
+DEV_USERS = 1113343031
+SUDO_USERS = 5656739348 5442143084 1113343031
+SYS_ADMIN = 1113343031
 BAN_STICKER = CAACAgUAAxkBAAEEpFNidTkfqXAEtd4GDKV_zVRSloue0QACvwUAAsgdqVfeq_hV7FwoQCQE
 LOAD =
 NO_LOAD = sed
