--- a/config.ini
+++ b/config.ini
@@ -3,16 +3,16 @@ log = True
 APP_ID = 6435225
 API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 5457975178:AAE0o8sHEFpectM1z1pUKFSnmbONbv8vU04
-OWNER_ID = 1113343031
-OWNER_USERNAME = JOCKU
+OWNER_ID = 5937170640
+OWNER_USERNAME = WTF_BLAZE
 SQLALCHEMY_DATABASE_URI = postgresql://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
 DB_URI = postgresql://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
-MESSAGE_DUMP = -1001869636024
-GBAN_LOGS = -1001869636024
-DEV_USERS = 1113343031
-SUDO_USERS = 5656739348 5442143084 1113343031
-SYS_ADMIN = 1113343031
-BAN_STICKER = CAACAgUAAxkBAAEEpFNidTkfqXAEtd4GDKV_zVRSloue0QACvwUAAsgdqVfeq_hV7FwoQCQE
+MESSAGE_DUMP = -1001638497994
+GBAN_LOGS = -1001638497994
+DEV_USERS = 5937170640
+SUDO_USERS = 5937170640
+SYS_ADMIN = 5937170640
+BAN_STICKER = CAACAgQAAxkBAAEOA5FjsU-1vffu0K2Mu6ZbNEAPkEw96AACmg8AAqbxcR4BPmecwo9J5y0E
 LOAD =
 NO_LOAD = sed
 WEBHOOK = False
