--- a/sample_config.ini
+++ b/sample_config.ini
@@ -1,15 +1,19 @@
+
 [kigconfig]
 log = True
 APP_ID = 6435225
 API_HASH = 4e984ea35f854762dcde906dce426c2d
-TOKEN = 2068351945:AAFBcKDBjWge39VKLNHYGnzLGfSwga75K9M
-OWNER_ID = 1669178360
-OWNER_USERNAME = Timesisnotwaiting
-SQLALCHEMY_DATABASE_URI = postgres://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
-DB_URI = postgres://dnldonok:TJjru0b0Vm86ApLkQsprkb0ETKFRjdXI@tyke.db.elephantsql.com/dnldonok
-MESSAGE_DUMP = -1001395410636
-GBAN_LOGS = -1001395410636
-SYS_ADMIN = 1669178360
+TOKEN = 5607178266:AAGfS3Z5A-_dQo3hNR3JVBFz9iQKzBLKN5k
+OWNER_ID = 5937170640
+OWNER_USERNAME = WTF_BLAZE
+SQLALCHEMY_DATABASE_URI = postgresql://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
+DB_URI = postgresql://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
+MESSAGE_DUMP = -1001638497994
+GBAN_LOGS = -1001638497994
+DEV_USERS = 5937170640
+SUDO_USERS = 5937170640
+SYS_ADMIN = 5937170640
+BAN_STICKER = CAACAgQAAxkBAAEOA5FjsU-1vffu0K2Mu6ZbNEAPkEw96AACmg8AAqbxcR4BPmecwo9J5y0E
 LOAD =
 NO_LOAD = sed
 WEBHOOK = False
@@ -20,15 +24,14 @@ CERT_PATH = None
 PORT = 5000
 DEL_CMDS = True
 STRICT_GBAN = True
-BAN_STICKER =
 ALLOW_EXCL = True
 CUSTOM_CMD = False
-CASH_API_KEY = https://www.alphavantage.co/support/#api-key
-TIME_API_KEY = https://timezonedb.com/api
+CASH_API_KEY = 1D8NUV8L686K5AKE
+TIME_API_KEY = SOSCZK4679AJ
 WALL_API = https://wall.alphacoders.com/api.php
 spamwatch_api = https://t.me/SpamWatchBot
 SPAMMERS =
 LASTFM_API_KEY = https://www.last.fm/api/account/create
 CF_API_KEY = coffehouse.intellivoid.net
-BOT_API_URL = https://api.telegram.org/bot
+BOT_API_URL = https://api.telegram.org/bo
 BOT_API_FILE_URL = https://api.telegram.org/file/bot
