--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ API_HASH = 4e984ea35f854762dcde906dce426c2d
 TOKEN = 5607178266:AAGfS3Z5A-_dQo3hNR3JVBFz9iQKzBLKN5k
 OWNER_ID = 5937170640
 OWNER_USERNAME = WTF_BLAZE
-SQLALCHEMY_DATABASE_URI = postgresql://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
-DB_URI = postgresql://wxuxaext:LiXb0urX0bY4U5xAQM4rUB8kQSw0ZsY4@lucky.db.elephantsql.com/wxuxaext
+SQLALCHEMY_DATABASE_URI = postgres://cqmbulme:WJy6maWsIi5E6BoTP2IsRT6dFk0N0RjB@queenie.db.elephantsql.com/cqmbulme
+DB_URI = postgresql://cqmbulme:WJy6maWsIi5E6BoTP2IsRT6dFk0N0RjB@queenie.db.elephantsql.com/cqmbulme
 MESSAGE_DUMP = -1001638497994
 GBAN_LOGS = -1001638497994
 DEV_USERS = 5937170640
