--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,17 @@
 [kigconfig]
 log = True
-APP_ID = 6435225
-API_HASH = 4e984ea35f854762dcde906dce426c2d
-TOKEN = 5607178266:AAGfS3Z5A-_dQo3hNR3JVBFz9iQKzBLKN5k
-OWNER_ID = 5937170640
-OWNER_USERNAME = WTF_BLAZE
+APP_ID = 1714588
+API_HASH = 78c27bf90c81f15a8af4aa0aeeadfc42
+TOKEN = 6026914511:AAHBYpcI9M9nc6QOaKpkanR7SLuKZnqITRU
+OWNER_ID = 5155813798
+OWNER_USERNAME = notreallysrk
 SQLALCHEMY_DATABASE_URI = postgresql://ssorvqul:nrGahlgzPBxLO1FQ3Rm0mPh0P8CtMULJ@arjuna.db.elephantsql.com/ssorvqul
 DB_URI = postgresql://ssorvqul:nrGahlgzPBxLO1FQ3Rm0mPh0P8CtMULJ@arjuna.db.elephantsql.com/ssorvqul
-MESSAGE_DUMP = -1001638497994
-GBAN_LOGS = -1001638497994
-DEV_USERS = 5937170640
-SUDO_USERS = 5937170640
-SYS_ADMIN = 5937170640
+MESSAGE_DUMP = -1001706274150
+GBAN_LOGS = -1001706274150
+DEV_USERS = 5155813798
+SUDO_USERS = 5155813798
+SYS_ADMIN = 5155813798
 BAN_STICKER = CAACAgQAAxkBAAEOA5FjsU-1vffu0K2Mu6ZbNEAPkEw96AACmg8AAqbxcR4BPmecwo9J5y0E
 LOAD =
 NO_LOAD = sed
@@ -25,8 +25,8 @@ DEL_CMDS = True
 STRICT_GBAN = True
 ALLOW_EXCL = True
 CUSTOM_CMD = False
-CASH_API_KEY = 1D8NUV8L686K5AKE
-TIME_API_KEY = SOSCZK4679AJ
+CASH_API_KEY = ICYI4BEH5I9QWWTJ
+TIME_API_KEY = UGT5RNZMDV4B
 WALL_API = https://wall.alphacoders.com/api.php
 spamwatch_api = https://t.me/SpamWatchBot
 SPAMMERS =
