--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@ API_HASH = 78c27bf90c81f15a8af4aa0aeeadfc42
 TOKEN = 6026914511:AAHBYpcI9M9nc6QOaKpkanR7SLuKZnqITRU
 OWNER_ID = 5155813798
 OWNER_USERNAME = notreallysrk
-SQLALCHEMY_DATABASE_URI = postgresql://ssorvqul:nrGahlgzPBxLO1FQ3Rm0mPh0P8CtMULJ@arjuna.db.elephantsql.com/ssorvqul
-DB_URI = postgresql://ssorvqul:nrGahlgzPBxLO1FQ3Rm0mPh0P8CtMULJ@arjuna.db.elephantsql.com/ssorvqul
+SQLALCHEMY_DATABASE_URI = postgresql://aextsuwv:NjriOkmVJboQhGFtR70MKqY147sHHMiz@jelani.db.elephantsql.com/aextsuwv
+DB_URI = postgresql://aextsuwv:NjriOkmVJboQhGFtR70MKqY147sHHMiz@jelani.db.elephantsql.com/aextsuwv
 MESSAGE_DUMP = -1001706274150
 GBAN_LOGS = -1001706274150
 DEV_USERS = 5155813798
