--- a/config.ini
+++ b/config.ini
@@ -2,16 +2,16 @@
 log = True
 APP_ID = 1714588
 API_HASH = 78c27bf90c81f15a8af4aa0aeeadfc42
-TOKEN = 1728730929:AAG_EynlteE7EcWTMaRkNkCrQ93eeFv3neI
-OWNER_ID = 5155813798
-OWNER_USERNAME = notreallysrk
+TOKEN = 6333220095:AAFxSbysjK02AGw2Qvr8qDJ6QBRh9Pfz9gM
+OWNER_ID = 5595248594
+OWNER_USERNAME = YouCantSearchMe
 SQLALCHEMY_DATABASE_URI = postgresql://aextsuwv:NjriOkmVJboQhGFtR70MKqY147sHHMiz@jelani.db.elephantsql.com/aextsuwv
 DB_URI = postgresql://aextsuwv:NjriOkmVJboQhGFtR70MKqY147sHHMiz@jelani.db.elephantsql.com/aextsuwv
-MESSAGE_DUMP = -1001706274150
-GBAN_LOGS = -1001706274150
-DEV_USERS = 5155813798
-SUDO_USERS = 5155813798
-SYS_ADMIN = 5155813798
+MESSAGE_DUMP = -1001874606201
+GBAN_LOGS = -1001874606201
+DEV_USERS = 5595248594
+SUDO_USERS = 5595248594
+SYS_ADMIN = 5595248594
 BAN_STICKER = CAACAgQAAxkBAAEOA5FjsU-1vffu0K2Mu6ZbNEAPkEw96AACmg8AAqbxcR4BPmecwo9J5y0E
 LOAD =
 NO_LOAD = sed
